--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "latest",
     "next": "^15.0.0",
+    "query-string": "9.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.0",
+    "@types/react-slick": "^0.23.13",
     "eslint": "latest",
     "eslint-config-next": "^15.0.0",
     "typescript": "latest"
