--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^6.4.5",
     "@mui/material-nextjs": "latest",
     "next": "^15.0.0",
+    "next-auth": "^4.24.11",
     "query-string": "9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "latest",
