--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-ui-nextjs-ts",
+  "name": "nextjs-ts",
   "version": "5.0.0",
   "private": true,
   "scripts": {
@@ -11,11 +11,7 @@
   },
   "dependencies": {
     "@emotion/cache": "latest",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "latest",
-    "@mui/material": "^6.4.5",
-    "@mui/material-nextjs": "latest",
+    "antd": "^5.24.6",
     "next": "^15.0.0",
     "next-auth": "^4.24.11",
     "query-string": "9.1.1",
@@ -26,12 +22,16 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "latest",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.0",
     "@types/react-slick": "^0.23.13",
+    "autoprefixer": "^10.4.21",
     "eslint": "latest",
     "eslint-config-next": "^15.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3",
     "typescript": "latest"
   }
 }
