--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@emotion/cache": "latest",
     "antd": "^5.24.6",
+    "cookies-next": "^5.1.0",
     "next": "^15.0.0",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.0.2",
     "query-string": "9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "latest",
     "@types/react": "^19.0.10",
